--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "dev": "webpack-dev-server --config build/webpack.dev.js",
+    "dev": "webpack-dev-server --progress --colors --config build/webpack.dev.js",
     "build": "webpack --config build/webpack.pro.js",
-    "watch": "webpack --watch --config build/webpack.dev.js"
+    "watch": "webpack --watch --config build/webpack.dev.js",
+    "dev:test": "node build/dev.js",
+    "build:pro": "node build/build.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,16 +18,22 @@
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
+    "chalk": "^2.4.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "eslint": "^6.1.0",
     "eslint-loader": "^2.2.1",
+    "express": "^4.17.1",
     "file-loader": "^4.2.0",
+    "glob": "^7.1.4",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
+    "opn": "^6.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "ora": "^3.4.0",
+    "rm": "^0.1.8",
     "sass-loader": "^7.2.0",
     "standard": "^13.1.0",
     "style-loader": "^1.0.0",
@@ -35,7 +43,9 @@
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
+    "webpack-dev-middleware": "^3.7.0",
     "webpack-dev-server": "^3.8.0",
+    "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
